--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <script src="js/script.js"></script>
-    <LINK rel="stylesheet" href="css/styles.css">
+    <script src="./js/script.js"></script>
+    <LINK rel="stylesheet" href="./css/styles.css">
     </LINK>
 </head>
 
@@ -11,17 +11,17 @@
 <header id="start">
     
   <div class="tooltip">
-    <a href="#hi"><img style="width: 100%;" src="/JustLookUp/assests/icons8-first-quarter-moon-96.png" alt=""></a>
+    <a href="#hi"><img style="width: 100%;" src="./assests/icons8-first-quarter-moon-96.png" alt=""></a>
     <span class="tooltiptext"><h4>Næste måneformørkelse:</h4>
       <p id="demo"></p></span>
   </div>
   <div class="tooltip">
-    <a href="#hi"><img style="width: 100%;" src="/JustLookUp/assests/meteorite.png" alt=""></a>
+    <a href="#hi"><img style="width: 100%;" src="./assests/meteorite.png" alt=""></a>
     <span class="tooltiptext"><h4>Asteroid 2022 AE1 flyver forbi om:</h4>
       <p id="astro2"></p></span>
   </div>
 <div style="margin-bottom: 0px;" class="tooltip">
-  <a href="#hi"><img style="width: 100%;" src="/JustLookUp/assests/icons8-planet-96.png" alt=""></a>
+  <a href="#hi"><img style="width: 100%;" src="./assests/icons8-planet-96.png" alt=""></a>
   <span class="tooltiptext"><h4>Se 3 planeter på samme tid om:</h4>
     <p id="astro3"></p></span>
 </div>
